# pkg-cutils

./: COPYRIGHT  CREDITS  HISTORY  Makefile.in  NEWS  README  README.compile  configure  configure.in  cutils.lsm  cutils_1.5.2.orig.tar.gz.delta  cutils_1.5.2.orig.tar.gz.id  cutils_1.6.orig.tar.gz.delta  cutils_1.6.orig.tar.gz.id  version.h
debian/: README.debian  changelog  control  copyright  crontab.ex  cutils.doc-base  cutils.prerm  dirs  inetd.conf.ex  info  init.d.ex  manpage.1.ex  menu.ex  postinst.debhelper  prerm.debhelper  rules  watch  watch.ex
debian/patches/: autoconf_2.69.patch  fix_info_doc.patch  fix_spelling.patch  honour_CPPFLAGS.patch  parallel_build.patch  prevent_BBPFS.patch  series  yylex_decl.patch
debian/tests/: all-utilities-packaged  control
debian/upstream/: signing-key.asc
doc/: Makefile.in  cutils.info  cutils.texi
etc/: RELEASE  cinfo.el  cinfodb-magic
examples/: README
examples/cobfusc/: Makefile  README
examples/cweb/: Makefile  wc.web
lib/: Makefile.in  alist.3  alist.c  alist.h  err.c  err.h  hash.c  hash.h  htable.3  htable.c  htable.h  xmalloc.c  xrealloc.c  xstrdup.c
src/: Makefile.in
src/cdecl/: Makefile.in  cdecl.1  cdecl.c  lexer.l  parser.y
src/chilight/: Makefile.in  chilight.1  chilight.c  lexer.l  tokens.h
src/cinfo/: Makefile.in
src/cobfusc/: Makefile.in  cobfusc.1  cobfusc.c  keywords.h  lexer.l  tokens.h
src/ctangle/: Makefile.in  ctangle.1  ctangle.c  cweb.5
src/cundecl/: Makefile.in  cundecl.1  cundecl.c  lexer.l  parser.y
src/cunloop/: METHODS  Makefile.in  cunloop.1  cunloop.c  lexer.l  (+1 more)
(+70 files in other folders)
